# mytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-requirements.yml  testing.yml
scenarios/: run_experiment.py
scenarios/bio-surrogate/: evaluate.py  evaluate_ffnn.py
scenarios/bio-surrogate/config/: p-ffnn-train-test-split.toml  p-ffnn.toml  u-cae.toml
scripts/: exp1.toml  run_experiment.py
scripts/bio-surrogate/: create_latent_space.py  define_dataset_subset.py  evaluate.py  evaluate_ffnn.py  split_dataset_ffnn.py
scripts/bio-surrogate/config/: p-cae.toml  p-ffnn-train-test-split.toml  p-ffnn.toml  u-cae.toml  u-ffnn-train-test-split.toml  u-ffnn.toml
src/: blocks.py  caes.py  datasets.py  experiment.py  metrics.py  parsers.py  postprocessing.py  preprocessing.py  trainers.py  utils.py  visualization.py
src/mytorch/: analysis.py  dataloaders.py  datamodules.py  experiment.py  metrics.py  mytypes.py  pipeline.py  postprocessing.py  preprocessing.py  run.py  scenarios.py  trainers.py  training.py  transforms.py
src/mytorch/config/: training.py  utils.py
src/mytorch/io/: config.py  loggers.py  logging.py  readers.py  utils.py  writers.py
src/mytorch/loggers/: training.py
src/mytorch/mlruns/0/: meta.yaml
src/mytorch/networks/: blocks.py  utils.py
src/mytorch/networks/caes/: __init__.py  base.py  blocks.py  cae1d.py  (+3 more)
src/mytorch/optimization/: __init__.py  optimization.py
src/mytorch/optuna/: datamodule.py  logger.py  model.py  optimizer.py  scheduler.py  trainer.py  trial.py
src/mytorch/run/: hparams.py  training.py
src/mytorch/scripts/: hparams.py  hparams_optimization.py  start_mlflow_server.py  training.py
src/mytorch/setup/: datamodule.py  model.py  optimizer.py  pruner.py  scheduler.py  tracking.py  trainer.py  transforms.py  trial.py
src/mytorch/utils/: defaults.py  lightning_utils.py  mlflow_utils.py  optuna.py  optuna_utils.py  processing.py  system.py  system_utils.py
src/networks/: blocks.py
src/networks/caes/: __init__.py  base.py  cae1d.py  cae2d.py  unet.py  vae.py
src/networks/decoders/: decoders1d.py  decoders2d.py
src/networks/encoders/: encoders1d.py  encoders2d.py
src/networks/ffnns/: __init__.py  mlps.py  simple.py
studies/: run_experiment.py
studies/bio-surrogate/: create_latent_space.py  define_dataset_subset.py  evaluate.py  evaluate_ffnn.py  split_dataset_ffnn.py
studies/bio-surrogate/cae/: best_config.toml  checkInputReadFormat.py  checkZerosBased.py  config.toml  separateDataset.py  test.py  train.py  visualize.py
studies/bio-surrogate/config/: p-cae.toml  p-ffnn-train-test-split.toml  p-ffnn.toml  u-cae.toml  u-ffnn-train-test-split.toml  u-ffnn.toml
studies/bio-surrogate/ffnn/: config.toml  train_ffnn.py
studies/bio-surrogate/model/: config.toml  predict.py  visualize.py
studies/bio-surrogate/volume/: clean_data.py  collect_parameters.py  collect_volumes.py  config.toml  prepare_parameters.py  prepare_volumes.py  train.py
tests/: test_parsers.py  test_trainers.py  test_utils.py
tests/test_io/: conftest.py  test_io_utils.py  test_loggers.py  test_readers.py
tests/test_io/test_files/: cae-test.toml
tests/test_loggers/: test_config_utils.py  test_logger_utils.py  test_loggers.py  test_training.py
tests/test_networks/test_caes/: test_cbam.py
(+25 files in other folders)
